--- a/.travis.yml
+++ b/.travis.yml
@@ -1,10 +1,18 @@
 language: python
 python:
-  - "2.7"
-  - "3.4"
+  - 2.7
+  - 3.4
+  - 3.5
+  - 3.6
+  - 3.7
+env:
+  - WITH_C=true
+  - WITH_C=false
 before_install:
-  - sudo apt-get update -qq
-  - sudo apt-get install -y libyajl1
+  - if [ "$WITH_C" = 'true' ]; then
+      sudo apt-get update -qq;
+      sudo apt-get install -y libyajl1;
+    fi
 install:
   - pip install .
 script: python tests.py
